<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="name"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_person"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/name_et"
            app:layout_constraintStart_toStartOf="@id/name_et"
            app:layout_constraintTop_toBottomOf="@+id/name_et"
            tools:ignore="TextContrastCheck" />

        <com.juple.storyapp.ui.CustomTextField
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/email_et"
            app:layout_constraintStart_toStartOf="@+id/email_et"
            app:layout_constraintTop_toBottomOf="@+id/email_et"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:enabled="false"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/password_et"
            app:layout_constraintStart_toStartOf="@+id/password_et"
            app:layout_constraintTop_toBottomOf="@+id/password_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="#000000" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>